Add more attributes to view model

--- a/data query and formatting.ipynb
+++ b/data query and formatting.ipynb
@@ -61,24 +61,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WorkoutId: 1, Person:Gabe, StartDate: 2022-06-29 00:00:00.000, Exercise: Bench, Repetitions: 11, Weight: 40kg\n",
-      "WorkoutId: 2, Person:Gabe, StartDate: 2022-07-07 00:00:00.000, Exercise: Squat, Repetitions: 5, Weight: 65kg\n",
-      "WorkoutId: 2, Person:Gabe, StartDate: 2022-07-07 00:00:00.000, Exercise: Hotep, Repetitions: 6, Weight: 30kg\n",
-      "WorkoutId: 3, Person:Gabe, StartDate: 2022-07-12 00:00:00.000, Exercise: Bench, Repetitions: 4, Weight: 60kg\n",
-      "WorkoutId: 3, Person:Gabe, StartDate: 2022-07-12 00:00:00.000, Exercise: Deadlift, Repetitions: 9, Weight: 100kg\n"
+      "WorkoutId: 1, PersonId: 1 Person:Gabe, StartDate: 2022-06-29 00:00:00.000, TopSetId: 1, ExcerciseId: 2, Exercise: Bench, Repetitions: 11, Weight: 40kg\n",
+      "WorkoutId: 2, PersonId: 1 Person:Gabe, StartDate: 2022-07-07 00:00:00.000, TopSetId: 2, ExcerciseId: 1, Exercise: Squat, Repetitions: 5, Weight: 65kg\n",
+      "WorkoutId: 2, PersonId: 1 Person:Gabe, StartDate: 2022-07-07 00:00:00.000, TopSetId: 3, ExcerciseId: 4, Exercise: Hotep, Repetitions: 6, Weight: 30kg\n",
+      "WorkoutId: 3, PersonId: 1 Person:Gabe, StartDate: 2022-07-12 00:00:00.000, TopSetId: 4, ExcerciseId: 2, Exercise: Bench, Repetitions: 4, Weight: 60kg\n",
+      "WorkoutId: 3, PersonId: 1 Person:Gabe, StartDate: 2022-07-12 00:00:00.000, TopSetId: 5, ExcerciseId: 3, Exercise: Deadlift, Repetitions: 9, Weight: 100kg\n"
      ]
     }
    ],
    "source": [
     "topsets = query_db(\"\"\"\n",
-    "    SELECT P.Name AS PersonName, W.WorkoutId, W.StartDate, E.Name AS ExerciseName, T.Repetitions, T.Weight\n",
+    "    SELECT \n",
+    "        P.PersonId, \n",
+    "        P.Name AS PersonName, \n",
+    "        W.WorkoutId, \n",
+    "        W.StartDate, \n",
+    "        T.TopSetId, \n",
+    "        E.ExcerciseId, \n",
+    "        E.Name AS ExerciseName, \n",
+    "        T.Repetitions, \n",
+    "        T.Weight\n",
     "    FROM Person P\n",
     "         LEFT JOIN Workout W ON P.PersonId=W.PersonId\n",
     "         LEFT JOIN TopSet T ON W.WorkoutId=T.WorkoutId\n",
@@ -86,7 +95,7 @@
     "    WHERE P.PersonId=?\"\"\", [1])\n",
     "\n",
     "for topset in topsets:\n",
-    "    print(f'WorkoutId: {topset[\"WorkoutId\"]}, Person:{topset[\"PersonName\"]}, StartDate: {topset[\"StartDate\"]}, Exercise: {topset[\"ExerciseName\"]}, Repetitions: {topset[\"Repetitions\"]}, Weight: {topset[\"Weight\"]}kg')"
+    "    print(f'WorkoutId: {topset[\"WorkoutId\"]}, PersonId: {topset[\"PersonId\"]} Person:{topset[\"PersonName\"]}, StartDate: {topset[\"StartDate\"]}, TopSetId: {topset[\"TopSetId\"]}, ExcerciseId: {topset[\"ExcerciseId\"]}, Exercise: {topset[\"ExerciseName\"]}, Repetitions: {topset[\"Repetitions\"]}, Weight: {topset[\"Weight\"]}kg')"
    ]
   },
   {
@@ -95,33 +104,40 @@
    "source": [
     "### Transform entity to view model with the following schema\n",
     "<pre>\n",
-    "{  \n",
-    "    \"name\": \"Gabe\",  \n",
-    "    \"workouts\": [  \n",
+    "{   \"PersonId\": 1,\n",
+    "    \"PersonName\": \"Gabe\",  \n",
+    "    \"Exercises\": [{\"ExerciseIs\": 1, \"ExerciseName\": \"Squat\"}, {\"ExerciseIs\": 2, \"ExerciseName\": \"Bench\"}]  \n",
+    "    \"Workouts\": [  \n",
     "        {  \n",
+    "            \"TopSetId\": 1,\n",
     "            \"StartDate\": \"2022-06-29 00:00:00.000\",  \n",
     "            \"TopSets\": [  \n",
     "                {  \n",
-    "                        \"ExerciseName\": \"Squat\",  \n",
-    "                        \"Weight\": 80,  \n",
-    "                        \"Repetitions\": 8  \n",
-    "                    },  \n",
-    "                    {  \n",
-    "                        \"ExerciseName\": \"Bench\",  \n",
-    "                        \"Weight\": 60,  \n",
-    "                        \"Repetitions\": 4  \n",
-    "                    }  \n",
-    "                ]  \n",
+    "                    \"ExerciseId\": 1,\n",
+    "                    \"ExerciseName\": \"Squat\",  \n",
+    "                    \"Weight\": 80,  \n",
+    "                    \"Repetitions\": 8  \n",
+    "                },  \n",
+    "                {  \n",
+    "                    \"ExerciseId\": 2,\n",
+    "                    \"ExerciseName\": \"Bench\",  \n",
+    "                    \"Weight\": 60,  \n",
+    "                    \"Repetitions\": 4  \n",
+    "                }  \n",
+    "            ]  \n",
     "        },  \n",
-    "        {  \n",
+    "        {\n",
+    "            \"TopSetId\": 2,\n",
     "            \"StartDate\": \"2022-07-01 00:00:00.000\",  \n",
     "            \"TopSets\": [  \n",
     "                {  \n",
+    "                    \"ExerciseId\": 1,\n",
     "                    \"ExerciseName\": \"Squat\",  \n",
     "                    \"Weight\": 85,  \n",
     "                    \"Repetitions\": 4  \n",
     "                },  \n",
     "                {  \n",
+    "                    \"ExerciseId\": 2,\n",
     "                    \"ExerciseName\": \"Bench\",  \n",
     "                    \"Weight\": 65,  \n",
     "                    \"Repetitions\": 5  \n",
@@ -172,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,14 +203,14 @@
     "        workouts.append({\n",
     "            'WorkoutId': workout_id,\n",
     "            'StartDate': topsets_in_workout[0]['StartDate'],\n",
-    "            'Exercises': [{\"ExerciseName\": t['ExerciseName'], \"Weight\": t['Weight'], \"Repetitions\": t['Repetitions'] } for t in topsets_in_workout]\n",
+    "            'TopSets': [{\"TopSetId\": t['TopSetId'], \"ExcerciseId\": t['ExcerciseId'], \"ExerciseName\": t['ExerciseName'], \"Weight\": t['Weight'], \"Repetitions\": t['Repetitions'] } for t in topsets_in_workout]\n",
     "        })\n",
     "    return workouts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -205,8 +221,10 @@
       "  {\n",
       "    \"WorkoutId\": 1,\n",
       "    \"StartDate\": \"2022-06-29 00:00:00.000\",\n",
-      "    \"Exercises\": [\n",
+      "    \"TopSets\": [\n",
       "      {\n",
+      "        \"TopSetId\": 1,\n",
+      "        \"ExcerciseId\": 2,\n",
       "        \"ExerciseName\": \"Bench\",\n",
       "        \"Weight\": 40,\n",
       "        \"Repetitions\": 11\n",
@@ -216,13 +234,17 @@
       "  {\n",
       "    \"WorkoutId\": 2,\n",
       "    \"StartDate\": \"2022-07-07 00:00:00.000\",\n",
-      "    \"Exercises\": [\n",
+      "    \"TopSets\": [\n",
       "      {\n",
+      "        \"TopSetId\": 2,\n",
+      "        \"ExcerciseId\": 1,\n",
       "        \"ExerciseName\": \"Squat\",\n",
       "        \"Weight\": 65,\n",
       "        \"Repetitions\": 5\n",
       "      },\n",
       "      {\n",
+      "        \"TopSetId\": 3,\n",
+      "        \"ExcerciseId\": 4,\n",
       "        \"ExerciseName\": \"Hotep\",\n",
       "        \"Weight\": 30,\n",
       "        \"Repetitions\": 6\n",
@@ -232,13 +254,17 @@
       "  {\n",
       "    \"WorkoutId\": 3,\n",
       "    \"StartDate\": \"2022-07-12 00:00:00.000\",\n",
-      "    \"Exercises\": [\n",
+      "    \"TopSets\": [\n",
       "      {\n",
+      "        \"TopSetId\": 4,\n",
+      "        \"ExcerciseId\": 2,\n",
       "        \"ExerciseName\": \"Bench\",\n",
       "        \"Weight\": 60,\n",
       "        \"Repetitions\": 4\n",
       "      },\n",
       "      {\n",
+      "        \"TopSetId\": 5,\n",
+      "        \"ExcerciseId\": 3,\n",
       "        \"ExerciseName\": \"Deadlift\",\n",
       "        \"Weight\": 100,\n",
       "        \"Repetitions\": 9\n",
@@ -254,6 +280,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'ExcerciseId': 1, 'ExerciseName': 'Squat'},\n",
+       " {'ExcerciseId': 2, 'ExerciseName': 'Bench'},\n",
+       " {'ExcerciseId': 3, 'ExerciseName': 'Deadlift'},\n",
+       " {'ExcerciseId': 4, 'ExerciseName': 'Hotep'}]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_all_exercises_from_topsets(topsets):\n",
+    "    exercise_ids = set([t['ExcerciseId'] for t in topsets])\n",
+    "    exercises = []\n",
+    "    for exercise_id in exercise_ids:\n",
+    "        exercises.append({\n",
+    "            'ExcerciseId': exercise_id,\n",
+    "            'ExerciseName': next((t['ExerciseName'] for t in topsets if t['ExcerciseId'] == exercise_id), 'Unknown')\n",
+    "        })\n",
+    "    return exercises\n",
+    "\n",
+    "get_all_exercises_from_topsets(topsets)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -262,20 +321,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "def convert_to_view_model(topsets):\n",
     "    return {\n",
-    "        'PersonName': get_name(topsets),\n",
+    "        'PersonId': next((t['PersonId'] for t in topsets), -1),\n",
+    "        'PersonName': next((t['PersonName'] for t in topsets), -1),\n",
+    "        'Exercises': get_all_exercises_from_topsets(topsets),\n",
     "        'Workouts': get_workouts(topsets)\n",
     "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -283,13 +344,34 @@
      "output_type": "stream",
      "text": [
       "{\n",
+      "  \"PersonId\": 1,\n",
       "  \"PersonName\": \"Gabe\",\n",
+      "  \"Exercises\": [\n",
+      "    {\n",
+      "      \"ExcerciseId\": 1,\n",
+      "      \"ExerciseName\": \"Squat\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"ExcerciseId\": 2,\n",
+      "      \"ExerciseName\": \"Bench\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"ExcerciseId\": 3,\n",
+      "      \"ExerciseName\": \"Deadlift\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"ExcerciseId\": 4,\n",
+      "      \"ExerciseName\": \"Hotep\"\n",
+      "    }\n",
+      "  ],\n",
       "  \"Workouts\": [\n",
       "    {\n",
       "      \"WorkoutId\": 1,\n",
       "      \"StartDate\": \"2022-06-29 00:00:00.000\",\n",
-      "      \"Exercises\": [\n",
+      "      \"TopSets\": [\n",
       "        {\n",
+      "          \"TopSetId\": 1,\n",
+      "          \"ExcerciseId\": 2,\n",
       "          \"ExerciseName\": \"Bench\",\n",
       "          \"Weight\": 40,\n",
       "          \"Repetitions\": 11\n",
@@ -299,13 +381,17 @@
       "    {\n",
       "      \"WorkoutId\": 2,\n",
       "      \"StartDate\": \"2022-07-07 00:00:00.000\",\n",
-      "      \"Exercises\": [\n",
+      "      \"TopSets\": [\n",
       "        {\n",
+      "          \"TopSetId\": 2,\n",
+      "          \"ExcerciseId\": 1,\n",
       "          \"ExerciseName\": \"Squat\",\n",
       "          \"Weight\": 65,\n",
       "          \"Repetitions\": 5\n",
       "        },\n",
       "        {\n",
+      "          \"TopSetId\": 3,\n",
+      "          \"ExcerciseId\": 4,\n",
       "          \"ExerciseName\": \"Hotep\",\n",
       "          \"Weight\": 30,\n",
       "          \"Repetitions\": 6\n",
@@ -315,13 +401,17 @@
       "    {\n",
       "      \"WorkoutId\": 3,\n",
       "      \"StartDate\": \"2022-07-12 00:00:00.000\",\n",
-      "      \"Exercises\": [\n",
+      "      \"TopSets\": [\n",
       "        {\n",
+      "          \"TopSetId\": 4,\n",
+      "          \"ExcerciseId\": 2,\n",
       "          \"ExerciseName\": \"Bench\",\n",
       "          \"Weight\": 60,\n",
       "          \"Repetitions\": 4\n",
       "        },\n",
       "        {\n",
+      "          \"TopSetId\": 5,\n",
+      "          \"ExcerciseId\": 3,\n",
       "          \"ExerciseName\": \"Deadlift\",\n",
       "          \"Weight\": 100,\n",
       "          \"Repetitions\": 9\n",
